--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -6,11 +6,10 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:id="@+id/imageView"
         android:background="@drawable/splash"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:scaleType="centerCrop"
-        />
+        android:layout_height="fill_parent" />
 </RelativeLayout>
