modified:   app/app.iml 	modified:   app/build.gradle 	modified:   app/src/main/AndroidManifest.xml 	new file:   app/src/main/Thumbs.db 	new file:   app/src/main/ic_launcher-web.png 	new file:   app/src/main/java/com/example/vipul/splash/DrawerAdapter.java 	modified:   app/src/main/java/com/example/vipul/splash/MainActivity.java 	modified:   app/src/main/java/com/example/vipul/splash/friend_list.java 	new file:   app/src/main/java/com/example/vipul/splash/item_row.java 	new file:   app/src/main/res/drawable/Thumbs.db 	new file:   app/src/main/res/drawable/background.jpg 	new file:   app/src/main/res/drawable/ic_action.png 	new file:   app/src/main/res/drawable/logo1.png 	modified:   app/src/main/res/layout/activity_friend_list.xml 	new file:   app/src/main/res/layout/activity_item_row.xml

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,4 +5,11 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <!-- Base application theme. -->
+    <style name="AppTheme1" parent="Theme.AppCompat.Light.NoActionBar">
+
+        <item name="colorPrimary">@color/ColorPrimary</item>
+        <item name="colorPrimaryDark">@color/ColorPrimaryDark</item>
+        <!-- Customize your theme here. -->
+    </style>
 </resources>
