modified:   app/src/main/AndroidManifest.xml 	modified:   app/src/main/java/com/example/vipul/splash/DrawerAdapter.java 	new file:   app/src/main/java/com/example/vipul/splash/EventDetails.java 	modified:   app/src/main/java/com/example/vipul/splash/EventPage.java 	new file:   app/src/main/java/com/example/vipul/splash/EventView.java 	modified:   app/src/main/java/com/example/vipul/splash/MainActivity.java 	new file:   app/src/main/java/com/example/vipul/splash/MapMe.java 	modified:   app/src/main/java/com/example/vipul/splash/friend_list.java 	modified:   app/src/main/res/layout/activity_chat_item.xml 	new file:   app/src/main/res/layout/activity_event_details.xml 	modified:   app/src/main/res/layout/activity_event_page.xml 	new file:   app/src/main/res/layout/activity_event_view.xml 	modified:   app/src/main/res/layout/activity_friend_list.xml 	new file:   app/src/main/res/layout/activity_map_me.xml 	new file:   app/src/main/res/menu/menu_event_details.xml 	new file:   app/src/main/res/menu/menu_event_view.xml 	new file:   app/src/main/res/menu/menu_map_me.xml 	modified:   app/src/main/res/values/colors.xml 	modified:   app/src/main/res/values/strings.xml

--- a/app/src/main/res/layout/activity_map_me.xml
+++ b/app/src/main/res/layout/activity_map_me.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context="com.example.vipul.splash.MapMe">
 
     <!-- Content Section -->
     <LinearLayout
@@ -16,15 +18,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/ColorPrimary"
-            android:titleTextAppearance="@color/light_font"
-            />
+            android:elevation="4dp" />
 
-
-            <ListView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/user_list">
-            </ListView>
+        <fragment
+            android:id="@+id/map"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            class="com.google.android.gms.maps.MapFragment" />
 
     </LinearLayout>
 
