modified:   app/src/main/java/com/example/vipul/splash/EventDetails.java 	modified:   app/src/main/java/com/example/vipul/splash/EventPage.java 	modified:   app/src/main/java/com/example/vipul/splash/EventView.java 	modified:   app/src/main/java/com/example/vipul/splash/MapMe.java 	new file:   app/src/main/res/drawable/bg.jpg 	new file:   app/src/main/res/drawable/friendship.jpg 	modified:   app/src/main/res/layout/activity_chat_item.xml 	modified:   app/src/main/res/layout/activity_event_details.xml 	new file:   app/src/main/res/layout/event_row.xml 	modified:   app/src/main/res/menu/menu_event_details.xml

--- a/app/src/main/res/menu/menu_event_details.xml
+++ b/app/src/main/res/menu/menu_event_details.xml
@@ -8,5 +8,10 @@
         android:id="@+id/OK"
         android:orderInCategory="100"
         app:showAsAction="ifRoom"
-        android:title="OK" />
+        android:title="delete"/>
+    <item
+        android:id="@+id/edit"
+        android:orderInCategory="100"
+        app:showAsAction="ifRoom"
+        android:title="edit"/>
 </menu>
