--- a/app/src/main/res/layout/activity_chat_item.xml
+++ b/app/src/main/res/layout/activity_chat_item.xml
@@ -4,6 +4,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:layout_margin="10dp"
+    android:elevation="4dp"
     tools:context="com.example.vipul.splash.chat_item">
 
     <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
@@ -12,6 +14,7 @@
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/imageView2"
         android:layout_marginLeft="20dp"
+        android:textStyle="bold"
         android:layout_toEndOf="@+id/imageView2" />
 
     <ImageView
