modified:   app/src/main/AndroidManifest.xml 	new file:   app/src/main/assets/fontawesome-webfont.ttf 	modified:   app/src/main/java/com/example/vipul/splash/EventDetails.java 	modified:   app/src/main/java/com/example/vipul/splash/EventPage.java 	new file:   app/src/main/java/com/example/vipul/splash/addmem.java 	new file:   app/src/main/res/layout/activity_addmem.xml 	modified:   app/src/main/res/layout/activity_event_page.xml 	modified:   app/src/main/res/layout/activity_item_row.xml 	new file:   app/src/main/res/layout/member_list.xml 	new file:   app/src/main/res/menu/menu_addmem.xml 	modified:   app/src/main/res/menu/menu_event_details.xml 	new file:   app/src/main/res/menu/selected_item.xml 	modified:   app/src/main/res/values/strings.xml 	modified:   app/src/main/res/values/styles.xml

--- a/app/src/main/res/layout/activity_event_page.xml
+++ b/app/src/main/res/layout/activity_event_page.xml
@@ -125,6 +125,24 @@
                         android:layout_alignParentStart="true" />
 
                 </RelativeLayout>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp"
+                    android:text="Meet up Place"
+                    android:id="@+id/location_label"/>
+
+                <AutoCompleteTextView
+                    android:id="@+id/location"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:completionThreshold="3"/>
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Add Members +"
+                    android:id="@+id/members"/>
 
                 <Button
                     android:layout_width="match_parent"
