--- a/app/src/main/res/menu/menu_event_details.xml
+++ b/app/src/main/res/menu/menu_event_details.xml
@@ -8,10 +8,10 @@
         android:id="@+id/OK"
         android:orderInCategory="100"
         app:showAsAction="ifRoom"
-        android:title="delete"/>
+        android:title="Delete"/>
     <item
         android:id="@+id/edit"
         android:orderInCategory="100"
         app:showAsAction="ifRoom"
-        android:title="edit"/>
+        android:title="Edit"/>
 </menu>
