--- a/app/src/main/res/layout/activity_item_row.xml
+++ b/app/src/main/res/layout/activity_item_row.xml
@@ -8,15 +8,9 @@
     android:orientation="horizontal">
 
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/rowIcon"
-        android:paddingLeft="16dp"
-        android:src="@drawable/logo1"/>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="12dp"
         android:paddingTop="4dp"
