modified:   app/app.iml 	modified:   app/build.gradle 	modified:   app/src/main/AndroidManifest.xml 	new file:   app/src/main/java/com/example/vipul/splash/DirectionsJSONParser.java 	modified:   app/src/main/java/com/example/vipul/splash/EventDetails.java 	modified:   app/src/main/java/com/example/vipul/splash/EventPage.java 	modified:   app/src/main/java/com/example/vipul/splash/EventView.java 	new file:   app/src/main/java/com/example/vipul/splash/GetDirections.java 	modified:   app/src/main/java/com/example/vipul/splash/MapMe.java 	modified:   app/src/main/java/com/example/vipul/splash/friend_list.java 	new file:   app/src/main/java/com/example/vipul/splash/invites.java 	new file:   app/src/main/java/com/example/vipul/splash/slider.java 	new file:   app/src/main/res/drawable/card.xml 	modified:   app/src/main/res/layout/activity_event_details.xml 	modified:   app/src/main/res/layout/activity_event_page.xml 	modified:   app/src/main/res/layout/activity_event_view.xml 	new file:   app/src/main/res/layout/activity_get_directions.xml 	new file:   app/src/main/res/layout/activity_invites.xml 	new file:   app/src/main/res/layout/activity_slider.xml 	modified:   app/src/main/res/layout/event_row.xml 	new file:   app/src/main/res/layout/invite_row_new.xml 	new file:   app/src/main/res/menu/menu_get_directions.xml 	new file:   app/src/main/res/menu/menu_invites.xml 	new file:   app/src/main/res/menu/menu_slider.xml 	modified:   app/src/main/res/menu/selected_item.xml 	modified:   app/src/main/res/values/colors.xml modified:   app/src/main/res/values/strings.xml 	modified:   app/src/main/res/values/styles.xml

--- a/app/src/main/res/layout/event_row.xml
+++ b/app/src/main/res/layout/event_row.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="10dp"
-    android:elevation="4dp"
-    android:padding="10dp">
+    android:layout_height="wrap_content"
+    android:background="@drawable/card">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:padding="10dp"
+        >
 
 
     <TextView
@@ -47,5 +51,6 @@
         android:layout_below="@+id/to"
         android:layout_alignLeft="@+id/eventname"
         android:layout_alignStart="@+id/eventname" />
+    </RelativeLayout>
 
 </RelativeLayout>
