--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -36,7 +36,7 @@
                     android:layout_alignParentStart="true"
                     android:paddingTop="15dp"
                     android:textStyle="bold"
-                    android:textSize="45sp" />
+                    android:textSize="45dp" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -106,7 +106,7 @@
                 <Button
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Get Directions"
+                    android:text="Get Route"
                     android:id="@+id/direction"
                     android:layout_marginTop="30dp"
                     android:layout_below="@+id/venue"
@@ -135,6 +135,16 @@
                     android:layout_below="@+id/tovariable"
                     android:layout_alignLeft="@+id/tovariable"
                     android:layout_alignStart="@+id/tovariable" />
+
+                <ImageView
+                    android:layout_width="70dp"
+                    android:layout_height="35dp"
+                    android:id="@+id/fbshare"
+                    android:src="@drawable/share"
+                    android:layout_below="@+id/createdby"
+                    android:layout_toRightOf="@+id/eventname"
+                    android:layout_toEndOf="@+id/eventname"
+                    android:layout_marginTop="20dp" />
 
             </RelativeLayout>
         </ScrollView>
