--- a/app/src/main/res/layout/activity_live_loc.xml
+++ b/app/src/main/res/layout/activity_live_loc.xml
@@ -1,34 +1,26 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <LinearLayout
-        android:layout_width="match_parent"
+    <LinearLayout android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/ColorPrimary"
-            android:titleTextAppearance="@color/light_font"
-            />
-
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/invite_list1"
-            android:choiceMode="singleChoice">
-
-        </ListView>
+            android:elevation="4dp" />
+        <fragment
+            android:id="@+id/map_live"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            class="com.google.android.gms.maps.SupportMapFragment" />
 
     </LinearLayout>
 
-
-    <!-- Drawer Section -->
     <android.support.v7.widget.RecyclerView
         android:id="@+id/drawer_recyclerView"
         android:layout_width="304dp"
