--- a/app/src/main/res/layout/drawer_item.xml
+++ b/app/src/main/res/layout/drawer_item.xml
@@ -4,18 +4,22 @@
     android:layout_width="match_parent"
     android:layout_height="48dp">
 
-    <ImageView
+    <TextView
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:id="@+id/drawer_row_icon"
         android:layout_marginLeft="16dp"
+        android:textSize="24sp"
+        android:paddingTop="5dp"
+        android:paddingLeft="5dp"
         android:layout_gravity="center_vertical"
-        android:src="@mipmap/ic_launcher"/>
+        android:textAlignment="center"
+        />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="72dp"
+        android:layout_marginLeft="62dp"
         android:layout_gravity="center_vertical"
         android:textColor="#FF757575"
         android:textAppearance="?android:attr/textAppearanceMedium"
