--- a/app/src/main/res/layout/activity_event_view.xml
+++ b/app/src/main/res/layout/activity_event_view.xml
@@ -21,9 +21,11 @@
             android:orientation="vertical">
 
             <ListView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/eventlist"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:divider="@android:color/transparent"
+                android:dividerHeight="0dp"
+                android:id="@+id/eventlist"
                 android:choiceMode="multipleChoice" />
         </LinearLayout>
     </LinearLayout>
