--- a/app/src/main/res/layout/activity_group.xml
+++ b/app/src/main/res/layout/activity_group.xml
@@ -43,6 +43,7 @@
                         android:divider="@android:color/transparent"
                         android:dividerHeight="0dp"
                         android:layout_height="match_parent"
+                        android:layout_marginBottom="73dp"
                         android:id="@+id/group_list"></ListView>
                     </LinearLayout>
 
