--- a/app/src/main/res/layout/activity_facebook.xml
+++ b/app/src/main/res/layout/activity_facebook.xml
@@ -21,6 +21,11 @@
                 android:background="@color/ColorPrimary"
                 android:elevation="4dp" />
 
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="5dip"
+                android:background="@drawable/dropshadow" ></View>
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
