--- a/app/src/main/res/layout/activity_event_page.xml
+++ b/app/src/main/res/layout/activity_event_page.xml
@@ -39,6 +39,12 @@
                         android:layout_height="wrap_content"
                         android:background="@color/ColorPrimary"
                         android:elevation="4dp" />
+
+                    <View
+                        android:layout_width="fill_parent"
+                        android:layout_height="5dip"
+                        android:background="@drawable/dropshadow" ></View>
+
                     <LinearLayout
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
