--- a/app/src/main/res/layout/activity_friend_list.xml
+++ b/app/src/main/res/layout/activity_friend_list.xml
@@ -19,6 +19,11 @@
             android:titleTextAppearance="@color/light_font"
             />
 
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="5dip"
+            android:background="@drawable/dropshadow" ></View>
+
 
             <ListView
                 android:layout_width="match_parent"
