--- a/app/src/main/res/layout/activity_group.xml
+++ b/app/src/main/res/layout/activity_group.xml
@@ -32,19 +32,23 @@
                     android:orientation="vertical">
 
                     <android.support.v7.widget.Toolbar
-                    android:id="@+id/toolbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/ColorPrimary"
-                    android:elevation="4dp" />
+                        android:id="@+id/toolbar"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/ColorPrimary"
+                        android:elevation="4dp" />
 
+                    <View
+                        android:layout_width="fill_parent"
+                        android:layout_height="5dip"
+                        android:background="@drawable/dropshadow" ></View>
                     <ListView
                         android:layout_width="match_parent"
                         android:divider="@android:color/transparent"
                         android:dividerHeight="0dp"
                         android:layout_height="match_parent"
                         android:layout_marginBottom="73dp"
-                        android:id="@+id/group_list"></ListView>
+                        android:id="@+id/group_list"/>
                     </LinearLayout>
 
                 <android.support.v7.widget.RecyclerView
